[package]
name = "oxtapus"
version = "0.1.4"
edition = "2021"
authors = ["Yagoub <ghaderi.yaghoub@gmail.com>"]
repository = "https://github.com/yghaderi/oxtapus-rs.git"
license = "MIT"
license-file = "LICENSE.txt"
description = "اُختاپوس برایِ پوششِ بخشی از داده‌هایِ موردِ نیاز در مدل-سازی‌هایِ مالی-اقتصادی توسعه داده شده است."

[dependencies]
reqwest = { version = "0.12.8", features = [
    "json",
    "rustls-tls",
    "blocking",
], doc = false }
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0" }
chrono = { version = "0.4.38", features = ["serde"] }
