[package]
name = "oxtapus"
version = "0.2.3"
edition = "2021"

description = "اُختاپوس برایِ پوششِ بخشی از داده‌هایِ موردِ نیاز در مدل-سازی‌هایِ مالی-اقتصادی توسعه داده شده است."   # ← required; customize this!
license     = "MIT"

repository  = "https://github.com/yghaderi/oxtapus-rs"
homepage    = "https://github.com/yghaderi/oxtapus-rs"
readme      = "README.md"
keywords    = ["tsetmc"]
# categories  = ["api"]

[dependencies]
reqwest = { version = "0.13.2", features = ["json", "blocking", "gzip"] }
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.44", features = ["serde"] }
thiserror = "2.0.18"
